# MLOPS-Number-Detection

./: .gitignore  Makefile  pyproject.toml
client/: app.py
src/: train.py
src/components/: data_augmentation.py  download_dataset.py  evaluate_model.py  process_data.py  save_data_to_csv.py  save_model.py  train_model.py  update_dataset.py
src/models/: dataset.py  torch_model.py
src/pipe/: augment_dataset.py
src/settings/: metadata.py  params.py
src/triggers/: data_trigger.py
src/utils/: set_seed.py  types.py
test/: test_download_dataset.py  test_process_data.py
